--- a/SASS/_global.scss
+++ b/SASS/_global.scss
@@ -5,19 +5,30 @@ body{
 		position: fixed;
 		height: 100%;
 		width: 100%;
+		top:40%;
 		.logo_chargement{
-			border: 3px solid #FF79DA;
+			border: 3px solid $color-secondary	;
 			border-radius: 20px;
+			box-shadow: 7px 9px 20px black;
 			width: 50%;
-			height: 15%;
+			height: 25%;	
 			display: flex;
+			flex-direction: column-reverse;
 			justify-content: center;
 			align-items: center;
 			margin: auto;
+			background-color: rgba($color: $color-primary, $alpha: 0.90);
+		}
+		h2{
+			font-size: 1.8em;
+			font-family: $font-shrikhand;
+			color: $color-tertiary;
+			text-shadow: 0px 6px 0px black;
 		}
 		.icone_chargement{
 			font-size: 2.5em;
-			color: $color-primary;
+			color: $color-secondary;
+			text-shadow: 0px 6px 0px black;
 		}
 	}
 	margin: 0;
